--- a/ProyectoIntgrador_GilliEmiliano/src/app/componentes/social/social.component.html
+++ b/ProyectoIntgrador_GilliEmiliano/src/app/componentes/social/social.component.html
@@ -1,6 +1,6 @@
 <div>
-    <a href=""><img src="../../../assets/linkedin.png" id="linkedin"></a>
-    <a href=""><img src="../../../assets/instagram.png" id="instagram"></a>
-    <a href=""><img src="../../../assets/facebook.png" id="facebook"></a>
-    <a href=""><img src="../../../assets/github.png" id="github"></a>
+    <a href="www.linkedin.com/in/emilianogilli"><img src="../../../assets/linkedin.png" id="linkedin"></a>
+    <a href="https://www.instagram.com/emilianoge"><img src="../../../assets/instagram.png" id="instagram"></a>
+    <a href="https://www.facebook.com/emiliano.gilli.3"><img src="../../../assets/facebook.png" id="facebook"></a>
+    <a href="https://github.com/emilianog1"><img src="../../../assets/github.png" id="github"></a>
 </div>
