--- a/ProyectoIntgrador_GilliEmiliano/src/app/componentes/logo-arg-prog/logo-arg-prog.component.html
+++ b/ProyectoIntgrador_GilliEmiliano/src/app/componentes/logo-arg-prog/logo-arg-prog.component.html
@@ -1,1 +1,17 @@
-<img src="../../../assets/APLogo.png" id="logoAP">
+<div class="row">
+    <div class="container">
+        <div class="logo">
+            <img src="../../../assets/APLogo.png" id="logoAP">
+        </div>
+        <div class="redes">
+            <div>
+                <a href="www.linkedin.com/in/emilianogilli"><img src="../../../assets/linkedin.png" id="linkedin"></a>
+                <a href="https://www.instagram.com/emilianoge"><img src="../../../assets/instagram.png" id="instagram"></a>
+                <a href="https://www.facebook.com/emiliano.gilli.3"><img src="../../../assets/facebook.png" id="facebook"></a>
+                <a href="https://github.com/emilianog1"><img src="../../../assets/github.png" id="github"></a>
+                <button type="button" class="btn btn-outline-light"> INGRESO </button>
+            </div>
+        </div>
+    </div>
+</div>
+
