--- a/ProyectoIntgrador_GilliEmiliano/src/app/app.component.html
+++ b/ProyectoIntgrador_GilliEmiliano/src/app/app.component.html
@@ -2,3 +2,6 @@
 <app-acerca-de></app-acerca-de>
 <app-experiencia></app-experiencia>
 <app-educacion></app-educacion>
+<app-skills></app-skills>
+<app-proyectos></app-proyectos>
+<app-footer></app-footer>
