--- a/ProyectoIntgrador_GilliEmiliano/src/app/componentes/acerca-de/acerca-de.component.css
+++ b/ProyectoIntgrador_GilliEmiliano/src/app/componentes/acerca-de/acerca-de.component.css
@@ -2,7 +2,7 @@
     padding: 20px;
 }
 div{
-    background-color: #3b8ce2;
+    background-color: #30c977;
 }
 #nombre{
     font-weight: bold;
@@ -18,13 +18,13 @@ div{
         top: 600px;
     }
 }
-@media(max-width: 576px){
+@media(max-width: 575px){
     #fotodeperfil{
         position: absolute;
         width: 30%;
         border-radius: 100%;
         box-shadow: 3px 3px 3px grey;
         left: 33%;
-        top: 630px;
+        top: 700px;
     }
 }
