--- a/ProyectoIntgrador_GilliEmiliano/src/app/componentes/experiencia/experiencia.component.css
+++ b/ProyectoIntgrador_GilliEmiliano/src/app/componentes/experiencia/experiencia.component.css
@@ -2,14 +2,15 @@
     padding: 20px;
 }
 div{
-    background-color: #7ef19b;
+    background-color: #30c977;
 }
 h1, h3{
     display: inline;
 }
 img{
     width: 80px;
-    border-radius: 15%;
+    border-radius: 10%;
+    box-shadow: 6px 6px 5px rgba(0, 0, 0, 0.781);
 }
 #servitambo{
     width: 120px;
