--- a/ProyectoIntgrador_GilliEmiliano/src/app/componentes/header/header.component.html
+++ b/ProyectoIntgrador_GilliEmiliano/src/app/componentes/header/header.component.html
@@ -1,5 +1,4 @@
-<div>
+<div class="row">
     <app-logo-arg-prog></app-logo-arg-prog>
-    <app-social></app-social>
     <app-banner></app-banner>
 </div>
