se agrego la seccion de educacion completa

--- a/ProyectoIntgrador_GilliEmiliano/FrontEnd/src/app/componentes/educacion/educacion.component.html
+++ b/ProyectoIntgrador_GilliEmiliano/FrontEnd/src/app/componentes/educacion/educacion.component.html
@@ -1,4 +1,36 @@
 <div class="row">
+    <h1>Educacion</h1>
+    <div class="col-lg-2">
+        <button type="button" class="btn btn-dark" routerLink="/nuevaedu" *ngIf="isLogged">
+            Nueva Educacion
+        </button>
+    </div>
+
+    <div class="col lg 1"></div>
+    <div class="col-lg-11">
+        <table class="table">
+            <tbody>
+                <tr *ngFor="let Educacion of edu">
+                    <td>
+                        <h2>{{Educacion.nombreEd}}</h2>
+                    </td>
+                    <td>{{Educacion.descripcionEd}}</td>
+                    <td>{{Educacion.estadoEd}}</td>
+                    <td *ngIf="isLogged">
+                        <button class="btn btn-light" routerLink="/editedu/{{Educacion.id}}">
+                            <i class="bi bi-pencil-fill"></i> EDITAR</button>
+                    </td>
+                    <td *ngIf="isLogged">
+                        <button class="btn btn-danger" (click)="delete(Educacion.id)">
+                            <i class="bi bi-trash-fill"></i> BORRAR</button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
+<!-- CODIGO DE LA MAQUETA AL INICIO DEL PROYECTO
+<div class="row">
     <h1>EDUCACION</h1>
     <div class="col-lg-1">     </div>
     <div class="col-lg-10">
@@ -37,4 +69,5 @@
         </ul>
     </div>
 </div>
+-->
 
