--- a/ProyectoIntgrador_GilliEmiliano/FrontEnd/src/app/componentes/educacion/educacion.component.html
+++ b/ProyectoIntgrador_GilliEmiliano/FrontEnd/src/app/componentes/educacion/educacion.component.html
@@ -1,8 +1,8 @@
 <div class="row">
-    <h1>Educacion</h1>
-    <div class="col-lg-2">
-        <button type="button" class="btn btn-dark" routerLink="/nuevaedu" *ngIf="isLogged">
-            Nueva Educacion
+    <div class="col-lg-11">
+        <h1>Educacion </h1>
+        <button title= "Nueva educacion" type="button" class="btn btn-primary" routerLink="/nuevaedu" *ngIf="isLogged">
+            <i class="bi bi-plus-lg"> </i>
         </button>
     </div>
 
@@ -17,12 +17,12 @@
                     <td>{{Educacion.descripcionEd}}</td>
                     <td>{{Educacion.estadoEd}}</td>
                     <td *ngIf="isLogged">
-                        <button class="btn btn-light" routerLink="/editedu/{{Educacion.id}}">
-                            <i class="bi bi-pencil-fill"></i> EDITAR</button>
+                        <button title= "Editar educacion" class="btn btn-light" routerLink="/editedu/{{Educacion.id}}">
+                            <i class="bi bi-pencil-fill"></i></button>
                     </td>
                     <td *ngIf="isLogged">
-                        <button class="btn btn-danger" (click)="delete(Educacion.id)">
-                            <i class="bi bi-trash-fill"></i> BORRAR</button>
+                        <button title= "Eliminar educacion" class="btn btn-danger" (click)="delete(Educacion.id)">
+                            <i class="bi bi-trash-fill"></i></button>
                     </td>
                 </tr>
             </tbody>
