--- a/ProyectoIntgrador_GilliEmiliano/FrontEnd/src/app/componentes/experiencia/edit-experiencia.component.html
+++ b/ProyectoIntgrador_GilliEmiliano/FrontEnd/src/app/componentes/experiencia/edit-experiencia.component.html
@@ -4,11 +4,11 @@
             <form (ngSubmit)="onUpdate()" novalidate #f="ngForm">
                 <div class="form-group">
                     <label for="nombreE">Nombre de la empresa</label>
-                    <input type="text" class="form-control" id="nombreE" name="nombreE" [(ngModel)]="expLab.nombreE" required>
+                    <input type="text" placeholder="Nombre de la empresa" class="form-control" id="nombreE" name="nombreE" [(ngModel)]="expLab.nombreE" required>
                 </div>
                 <div class="form-group">
                     <label for="descripcionE">Descripcion de la tarea</label>
-                    <input type="text" class="form-control" id="descripcionE" name="descripcionE" [(ngModel)]="expLab.descripcionE" required>
+                    <input type="text" placeholder="Descripcion de la tarea realizada" class="form-control" id="descripcionE" name="descripcionE" [(ngModel)]="expLab.descripcionE" required>
                 </div>
                 <button class="btn btn-primary">
                     Actualizar
