--- a/ProyectoIntgrador_GilliEmiliano/FrontEnd/src/app/componentes/experiencia/experiencia.component.html
+++ b/ProyectoIntgrador_GilliEmiliano/FrontEnd/src/app/componentes/experiencia/experiencia.component.html
@@ -1,8 +1,8 @@
 <div class="row">
-    <h1>Experiencia laboral</h1>
-    <div class="col-lg-2">
-        <button type="button" class="btn btn-dark" routerLink="/nuevaexp" *ngIf="isLogged">
-            Nueva Experiencia
+    <div class="col-lg-11">
+    <h1>Experiencia laboral </h1>
+        <button title= "Nueva experiencia" type="button" class="btn btn-primary" routerLink="/nuevaexp" *ngIf="isLogged">
+            <i class="bi bi-plus-lg"> </i> 
         </button>
     </div>
 
@@ -16,12 +16,12 @@
                     </td>
                     <td>{{Experiencia.descripcionE}}</td>
                     <td *ngIf="isLogged">
-                        <button class="btn btn-light" routerLink="/editexp/{{Experiencia.id}}">
-                            <i class="bi bi-pencil-fill"></i> EDITAR</button>
+                        <button title= "Editar experiencia" class="btn btn-light" routerLink="/editexp/{{Experiencia.id}}">
+                            <i class="bi bi-pencil-fill"></i> </button>
                     </td>
                     <td *ngIf="isLogged">
-                        <button class="btn btn-danger" (click)="delete(Experiencia.id)">
-                            <i class="bi bi-trash-fill"></i> BORRAR</button>
+                        <button title= "Eliminar experiencia" class="btn btn-danger" (click)="delete(Experiencia.id)">
+                            <i class="bi bi-trash-fill"></i> </button>
                     </td>
                 </tr>
             </tbody>
