--- a/ProyectoIntgrador_GilliEmiliano/FrontEnd/src/app/componentes/experiencia/new-experiencia.component.html
+++ b/ProyectoIntgrador_GilliEmiliano/FrontEnd/src/app/componentes/experiencia/new-experiencia.component.html
@@ -3,12 +3,12 @@
         <div>
             <form (ngSubmit)="onCreate()" novalidate #f="ngForm">
                 <div class="form-group">
-                    <label for="nombreE">Nombre de la empresa</label>
-                    <input type="text" class="form-control" id="nombreE" name="nombreE" [(ngModel)]="nombreE" required>
+                    <!--<label for="nombreE">Nombre de la empresa</label>-->
+                    <input type="text" placeholder="Nombre de la empresa" class="form-control" id="nombreE" name="nombreE" [(ngModel)]="nombreE" required>
                 </div>
                 <div class="form-group">
-                    <label for="descripcionE">Descripcion de la tarea</label>
-                    <input type="text" class="form-control" id="descripcionE" name="descripcionE" [(ngModel)]="descripcionE" required>
+                    <!--<label for="descripcionE">Descripcion de la tarea</label>-->
+                    <input type="text" placeholder="Descripcion de la tarea realizada" class="form-control" id="descripcionE" name="descripcionE" [(ngModel)]="descripcionE" required>
                 </div>
                 <button class="btn btn-primary">
                     Agregar experiencia
