--- a/ProyectoIntgrador_GilliEmiliano/FrontEnd/src/app/componentes/educacion/educacion.component.html
+++ b/ProyectoIntgrador_GilliEmiliano/FrontEnd/src/app/componentes/educacion/educacion.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-lg-11">
         <h1>Educacion </h1>
-        <button title= "Nueva educacion" type="button" class="btn btn-primary" routerLink="/nuevaedu" *ngIf="isLogged">
+        <button title= "Nueva educacion" type="button" class="btn btn-secondary" routerLink="/nuevaedu" *ngIf="isLogged">
             <i class="bi bi-plus-lg"> </i>
         </button>
     </div>
