--- a/ProyectoIntgrador_GilliEmiliano/FrontEnd/src/app/componentes/experiencia/experiencia.component.html
+++ b/ProyectoIntgrador_GilliEmiliano/FrontEnd/src/app/componentes/experiencia/experiencia.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-lg-11">
     <h1>Experiencia laboral </h1>
-        <button title= "Nueva experiencia" type="button" class="btn btn-primary" routerLink="/nuevaexp" *ngIf="isLogged">
+        <button title= "Nueva experiencia" type="button" class="btn btn-secondary" routerLink="/nuevaexp" *ngIf="isLogged">
             <i class="bi bi-plus-lg"> </i> 
         </button>
     </div>
@@ -27,9 +27,7 @@
             </tbody>
         </table>
     </div>
-
 </div>
-
 <!-- CODIGO DE LA MAQUETA AL INICIO DEL PROYECTO
      <div class="row">
     <h1>EXPERIENCIA LABORAL</h1>
