--- a/ProyectoIntgrador_GilliEmiliano/FrontEnd/src/app/componentes/proyectos/proyectos.component.html
+++ b/ProyectoIntgrador_GilliEmiliano/FrontEnd/src/app/componentes/proyectos/proyectos.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-lg-11">
         <h1>Proyectos Realizados </h1>
-        <button title= "Nuevo proyecto" type="button" class="btn btn-primary" routerLink="/nuevopro" *ngIf="isLogged">
+        <button title= "Nuevo proyecto" type="button" class="btn btn-secondary" routerLink="/nuevopro" *ngIf="isLogged">
             <i class="bi bi-plus-lg"> </i>
         </button>
     </div>
