--- a/ProyectoIntgrador_GilliEmiliano/FrontEnd/src/app/componentes/skills/skills.component.html
+++ b/ProyectoIntgrador_GilliEmiliano/FrontEnd/src/app/componentes/skills/skills.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-lg-12">
     <h1>HW & SW Skills </h1>
-        <button title= "Nueva Skill" type="button" class="btn btn-primary" routerLink="/nuevaskill" *ngIf="isLogged">
+        <button title= "Nueva Skill" type="button" class="btn btn-secondary" routerLink="/nuevaskill" *ngIf="isLogged">
             <i class="bi bi-plus-lg"> </i>
         </button>
     </div>
@@ -17,7 +17,7 @@
                             [radius]="80"
                             [showUnits]="false"
                             [title]=Skill.nombreS
-                            [titleColor]="'grey'"
+                            [titleColor]="'Black'"
                             [titleFontSize]="'2em'"
                             [showSubtitle]="false"
                             [outerStrokeWidth]="16"
