--- a/ProyectoIntgrador_GilliEmiliano/FrontEnd/src/app/componentes/educacion/educacion.component.css
+++ b/ProyectoIntgrador_GilliEmiliano/FrontEnd/src/app/componentes/educacion/educacion.component.css
@@ -7,7 +7,8 @@ img{
     padding: 20px;
 }
 div{
-    background-color: #30c977;
+    /*background-color: #30c977;*/
+    background: #6c8cb6;
 }
 h1, h3{
     display: inline;
