--- a/ProyectoIntgrador_GilliEmiliano/FrontEnd/src/app/componentes/experiencia/experiencia.component.css
+++ b/ProyectoIntgrador_GilliEmiliano/FrontEnd/src/app/componentes/experiencia/experiencia.component.css
@@ -2,7 +2,9 @@
     padding: 20px;
 }
 div{
-    background-color: #30c977;
+    /*background-color: #30c977;*/
+    background: #6c8cb6;
+
 }
 h1, h3{
     display: inline;
