--- a/ProyectoIntgrador_GilliEmiliano/FrontEnd/src/app/componentes/footer/footer.component.css
+++ b/ProyectoIntgrador_GilliEmiliano/FrontEnd/src/app/componentes/footer/footer.component.css
@@ -1,9 +1,10 @@
 .row{
-    background-color: #7fa3c9;
+    /*background-color: #7fa3c9;*/
+    background: #00358e;
 }
 footer{
-    color: #1401017e;
-    font-size: 14px;
+    color: #eef1f17e;
+    font-size: 15px;
     display: flex;
     flex-direction: column;
     text-align: center;
