--- a/ProyectoIntgrador_GilliEmiliano/FrontEnd/src/app/componentes/login/login.component.html
+++ b/ProyectoIntgrador_GilliEmiliano/FrontEnd/src/app/componentes/login/login.component.html
@@ -1,5 +1,5 @@
 <section class="vh-100 gradient-custom">
-  <div class="container py-5 h-100">
+  <div class="container py-4 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-12 col-md-8 col-lg-6 col-xl-5">
         <div class="card bg-dark text-white" style="border-radius: 1rem;">
@@ -8,7 +8,7 @@
             <div class="mb-md-5 mt-md-4 pb-5">
 
               <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
-              <p class="text-white-50 mb-5">Por favor, ingresar usuario y clave</p>
+              <p class="text-white-50 mb-5">Por favor, ingresar usuario y contraseña</p>
 
               <form #f="ngForm" (ngSubmit)="onLogin()" novalidate>
 
@@ -21,22 +21,14 @@
                 <div class="form-outline form-white mb-4">
                   <input type="password" id="password" name="password" class="form-control form-control-lg" [(ngModel)]="password"
                     required />
-                  <label class="form-label" for="password">Password</label>
+                  <label class="form-label" for="password">Contraseña</label>
                 </div>
 
                 <!-- <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p> -->
 
-                <button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>
-
+                <button class="btn btn-outline-light btn-lg px-5" type="submit">Ingresar</button>
               </form>
-
             </div>
-
-            <div>
-              <p class="mb-0">¿No tienes una cuenta? <a href="#!" class="text-white-50 fw-bold">Sign Up</a>
-              </p>
-            </div>
-
           </div>
         </div>
       </div>
